--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@ body{
     color: black;
 }
 
+main{
+    padding: 20px;
+}
+
 input, button{
     font-family: 'Baloo Paaji 2', sans-serif;
     font-size: 1rem;
@@ -26,4 +30,12 @@ input, button{
 .title{
     font-weight: 700;
     font-size: 2rem;
+}
+
+.defaultStyle{
+    background-color: white;
+    width: fit-content;
+    padding: 30px 20px;
+    border-radius: 15px;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
