--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,6 +31,14 @@ nav ul li img{
     border-radius: 15px;
 }
 
+.header-wrapper span{
+    border-radius: 50%;
+    width: 7px;
+    height: 7px;
+    background-color: var(--default_colour);
+    margin-left: 5px;
+}
+
 .header-items{
     display: flex;
     align-items: center;
