--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
 
 body{
     font-family: 'Baloo Paaji 2', sans-serif;
-    background-color: var(--background_colour);
+    /* background-color: var(--background_colour); */
+    background-color: rgb(247, 232, 207);
     font-size: 1rem;
     font-weight: 500;
     color: black;
