--- a/src/components/CoverImage/CoverImage.css
+++ b/src/components/CoverImage/CoverImage.css
@@ -4,6 +4,9 @@
     position: relative;
     width: fit-content;
     height: 450px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .cover img{
@@ -11,9 +14,8 @@
     height: 450px;
     object-fit: contain;
     border-radius: 15px;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
-
-
 
 .cover .cover-title{
     width: 800px;
